feat(starship): add time to terminal

--- a/home/dot_config/exact_starship/starship.toml
+++ b/home/dot_config/exact_starship/starship.toml
@@ -23,3 +23,8 @@ symbol = ' '
 format = '- [$symbol](bold purple)[\[$output\]](bold red) '
 command = "$XDG_CONFIG_HOME/starship/chezmoi_status_diff.sh"
 when = ' ! chezmoi verify -x scripts '
+
+[time]
+disabled = false
+format = '🕙[\[ $time \]]($style) '
+time_format = '%T'
