--- a/home/dot_config/xsettingsd/xsettingsd.conf
+++ b/home/dot_config/xsettingsd/xsettingsd.conf
@@ -10,7 +10,7 @@ Gtk/CursorThemeSize 28
 Net/SoundThemeName "ocean"
 Gtk/FontName "Noto Sans,  10"
 Net/ThemeName "Catppuccin-Macchiato-Standard-Blue-Dark"
-Net/IconThemeName "breeze-dark"
+Net/IconThemeName "klassy-dark"
 Gtk/CursorThemeName "breeze_cursors"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
