--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -55,3 +55,7 @@ packages:
       - "org.remmina.Remmina"
       - "sh.cider.Cider"
       - "us.zoom.Zoom"
+
+    # snap list
+    snap:
+      - "icloud-for-linux"
