--- a/home/dot_config/topgrade.toml
+++ b/home/dot_config/topgrade.toml
@@ -9,7 +9,7 @@
 #assume_yes = true
 
 # Disable specific steps - same options as the command line flag
-disable = ["chezmoi", "vim", "containers", "node"]
+disable = ["chezmoi", "vim", "containers", "node", "uv"]
 
 # Ignore failures for these steps
 #ignore_failures = ["powershell"]
