build(deps): update apdatifier

--- a/home/dot_config/apdatifier/config.conf
+++ b/home/dot_config/apdatifier/config.conf
@@ -5,8 +5,8 @@ arch="true"
 aur="true"
 flatpak="false"
 widgets="true"
-newsArch="false"
-newsKDE="false"
+newsArch="true"
+newsKDE="true"
 newsTWIK="false"
 newsTWIKA="false"
 newsKeep="3"
@@ -15,28 +15,35 @@ rightAction=""
 scrollUpAction="switchInterval"
 scrollDownAction="management"
 notifyUpdates="true"
+notifyAction="false"
 notifyEveryBump="true"
 notifyNews="true"
 notifyErrors="false"
 notifySound="true"
 notifyPersistent="false"
 wrapper="/usr/bin/yay"
-upgradeFlags="false"
-upgradeFlagsText=""
+archFlags=""
 sudoBin="sudo"
+rebootSystem="false"
 mirrors="false"
 mirrorCount="5"
 dynamicUrl="null"
+flatpakRemoveUnused="false"
 flatpakFlags=""
 widgetConfirmation="true"
 restartShell="true"
 restartCommand="systemctl --user restart plasma-plasmashell.service"
+preExec=""
+postExec=""
 terminal="/usr/bin/kitty"
+idleInhibit="false"
+tmuxSession="false"
 termFont="true"
 relevantIcon="0"
 selectedIcon="apdatifier-plasmoid"
 indicatorStop="true"
 counterEnabled="true"
+counterOnLeft="false"
 counterColor=""
 counterSize="0"
 counterRadius="3"
@@ -68,9 +75,8 @@ upgradeButton="true"
 checkButton="true"
 tabBarVisible="true"
 tabBarTexts="true"
-tabBarNewsRelevant="false"
-version="v0"
-timestamp="1733843855038"
+version="v2.9.3"
+timestamp="1752086205711"
 configMsg="false"
 rulesMsg="true"
 
