--- a/home/dot_config/lazygit/config.yml
+++ b/home/dot_config/lazygit/config.yml
@@ -14,10 +14,10 @@ customCommands:
     description: "commit with cz-jira"
     context: "files"
     loadingText: "opening commitizen commit tool"
-    subprocess: true
+    output: terminal
   - key: "C"
     command: "cz c"
     description: "commit with commitizen"
     context: "files"
     loadingText: "opening commitizen commit tool"
-    subprocess: true
+    output: terminal
