build(deps): update `cider` installation steps

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -16,6 +16,7 @@ packages:
       - "postman-bin"
       - "etcher-bin"
       - "klassy" # theme and focused window highlighter
+      - "cider"
 
       # CLI packages
       - "akm" # great tool for kernel selection
