--- a/home/dot_config/apdatifier/config.conf
+++ b/home/dot_config/apdatifier/config.conf
@@ -1,6 +1,10 @@
-interval="true"
-time="60"
-checkOnStartup="true"
+checkMode="interval"
+intervalMinutes="120"
+dailyHour="20"
+dailyMinute="30"
+weeklyDay="0"
+weeklyHour="20"
+weeklyMinute="30"
 arch="true"
 aur="true"
 flatpak="false"
@@ -15,9 +19,10 @@ rightAction=""
 scrollUpAction="switchInterval"
 scrollDownAction="management"
 notifyUpdates="true"
-notifyAction="false"
+notifyUpdatesAction="false"
 notifyEveryBump="true"
 notifyNews="true"
+notifyNewsAction="false"
 notifyErrors="false"
 notifySound="true"
 notifyPersistent="false"
@@ -26,6 +31,7 @@ archFlags=""
 sudoBin="sudo"
 rebootSystem="false"
 mirrors="false"
+mirrorsAge="7"
 mirrorCount="5"
 dynamicUrl="null"
 flatpakRemoveUnused="false"
@@ -33,6 +39,8 @@ flatpakFlags=""
 widgetConfirmation="true"
 restartShell="true"
 restartCommand="systemctl --user restart plasma-plasmashell.service"
+trayEnabledByDefault="false"
+trayEnabledBy="undefined"
 preExec=""
 postExec=""
 terminal="/usr/bin/kitty"
@@ -41,7 +49,8 @@ tmuxSession="false"
 termFont="true"
 relevantIcon="0"
 selectedIcon="apdatifier-plasmoid"
-indicatorStop="true"
+badgePaused="true"
+badgeUpdated="true"
 counterEnabled="true"
 counterOnLeft="false"
 counterColor=""
@@ -62,7 +71,8 @@ counterBottom="false"
 counterRight="true"
 counterLeft="false"
 ownIconsUI="true"
-listView="0"
+defaultTab="0"
+switchDefaultTab="false"
 spacing="6"
 sorting="true"
 showStatusText="true"
@@ -73,10 +83,12 @@ sortButton="true"
 managementButton="true"
 upgradeButton="true"
 checkButton="true"
+pinButton="true"
+settingsButton="true"
 tabBarVisible="true"
 tabBarTexts="true"
 version="v2.9.3"
-timestamp="1760827392220"
+timestamp="1765035788265"
 configMsg="false"
 rulesMsg="true"
 
