--- a/home/dot_config/exact_gtk-3.0/private_settings.ini
+++ b/home/dot_config/exact_gtk-3.0/private_settings.ini
@@ -15,11 +15,11 @@ gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-theme-name=Catppuccin-Macchiato-Standard-Blue-Dark
+gtk-theme-name=Breeze
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=3
 gtk-xft-antialias=1
-gtk-xft-dpi=167116
+gtk-xft-dpi=98304
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
